Fix signature of capi_ll_control. From Wolfgang Stukenbrock in PR kern/47863.